--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/kodluyoruz?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=12345
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+# This parameter excludes stack trace from error response
+server.error.include-stacktrace=never
+# Enables all the endpoints of actuator
+management.endpoints.web.exposure.include=*
