--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,15 @@ spring.datasource.username=root
 spring.datasource.password=12345
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
 # This parameter excludes stack trace from error response
 server.error.include-stacktrace=never
+server.error.include-message=always
+
+#Swagger Config
+springdoc.swagger-ui.path=/swagger
+#springdoc.swagger-ui.operationsSorter=method
+
+
 # Enables all the endpoints of actuator
 management.endpoints.web.exposure.include=*
